<resources>
    <string name="app_name">CustomButtonNavigationView</string>
    <string name="menu_home">Home</string>
    <string name="menu_list">List</string>
    <string name="menu_report">Report</string>
    <string name="menu_account">Account</string>
    <string name="menu_setting">Setting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
