<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item1"
        android:icon="@drawable/home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/item2"
        android:icon="@drawable/list"
        android:title="@string/menu_list"/>

    <item
        android:id="@+id/item3"
        android:icon="@drawable/report"
        android:title="@string/menu_report"/>

    <item
        android:id="@+id/item4"
        android:icon="@drawable/profile"
        android:title="@string/menu_account"/>

    <item
        android:id="@+id/item5"
        android:icon="@drawable/setting"
        android:title="@string/menu_setting"/>
</menu>